:baby_bottle: edit compontent

--- a/docs/feui/guide/component/swiper.html
+++ b/docs/feui/guide/component/swiper.html
@@ -677,7 +677,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/swiper.html" class="sidebar-link current new">Swiper 滑动操作</a>
+      <a href="/docs/feui/guide/component/swiper.html" class="sidebar-link current">Swiper 滑动操作</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link new">Toast 提示</a>
     </li>
   
     
@@ -876,6 +890,8 @@
         
           <span>← <a href="/docs/feui/guide/component/slidbtn.html">Slidbtn 滑动操作</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/toast.html">Toast 提示</a> →</span>
         
       </div>
     
