--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -677,7 +677,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/swiper.html" class="sidebar-link new">Swiper 滑动操作</a>
+      <a href="/docs/feui/guide/component/swiper.html" class="sidebar-link">Swiper 滑动操作</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link new">Toast 提示</a>
     </li>
   
     
@@ -1040,6 +1054,30 @@
 <td style="text-align:center">滑动加载</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/scroll.html">https://feui.gitee.io/docs/feui/guide/component/scroll.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/scroll">https://feui.gitee.io/#/scroll</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">509</td>
+<td style="text-align:center">Slidbtn</td>
+<td style="text-align:center">滑动操作</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/slidbtn.html">https://feui.gitee.io/docs/feui/guide/component/slidbtn.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/slidbtn">https://feui.gitee.io/#/slidbtn</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">510</td>
+<td style="text-align:center">Swiper</td>
+<td style="text-align:center">滑动操作</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/swiper.html">https://feui.gitee.io/docs/feui/guide/component/swiper.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/swiper">https://feui.gitee.io/#/swiper</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">511</td>
+<td style="text-align:center">Toast</td>
+<td style="text-align:center">提示</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/toast.html">https://feui.gitee.io/docs/feui/guide/component/toast.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/toast">https://feui.gitee.io/#/toast</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
