:baby_bottle: add new docs uploader

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -691,7 +691,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link new">Toast 提示</a>
+      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link">Toast 提示</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link new">Uploader 上传</a>
     </li>
   
     
@@ -1078,6 +1092,14 @@
 <td style="text-align:center">提示</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/toast.html">https://feui.gitee.io/docs/feui/guide/component/toast.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/toast">https://feui.gitee.io/#/toast</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">512</td>
+<td style="text-align:center">Uploader</td>
+<td style="text-align:center">上传</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/uploader.html">https://feui.gitee.io/docs/feui/guide/component/uploader.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/uploader">https://feui.gitee.io/#/uploader</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
