--- a/docs/feui/guide/component/toast.html
+++ b/docs/feui/guide/component/toast.html
@@ -691,7 +691,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link current new">Toast 提示</a>
+      <a href="/docs/feui/guide/component/toast.html" class="sidebar-link current">Toast 提示</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link new">Uploader 上传</a>
     </li>
   
     
@@ -857,6 +871,8 @@
         
           <span>← <a href="/docs/feui/guide/component/swiper.html">Swiper 滑动操作</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/uploader.html">Uploader 上传</a> →</span>
         
       </div>
     
