--- a/docs/feui/guide/component/uploader.html
+++ b/docs/feui/guide/component/uploader.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Textarea 文本域 — Feui</title>
+    <title>Uploader 上传 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -535,7 +535,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/textarea.html" class="sidebar-link current">Textarea 文本域</a>
+      <a href="/docs/feui/guide/component/textarea.html" class="sidebar-link">Textarea 文本域</a>
     </li>
   
     
@@ -705,7 +705,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link new">Uploader 上传</a>
+      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link current new">Uploader 上传</a>
     </li>
   
     
@@ -732,22 +732,17 @@
 
 
 
-<div  id='content' class="content guide with-sidebar textarea-guide">
+<div  id='content' class="content guide with-sidebar uploader-guide">
   <div class='content_box'>
     
-      <h1>Textarea 文本域</h1>
+      <h1>Uploader 上传</h1>
     
     <div id='pContent'>
-      <p><a href="https://feui.gitee.io/#/textarea">Live Demo&gt;&gt;</a></p>
-<blockquote>
-<p><code>fe-count</code> 请在<code>fe-group</code>中使用。</p>
-</blockquote>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Textarea &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line">components: &#123;</div><div class="line">  [Textarea.name]: Textarea</div><div class="line">&#125;,</div><div class="line">data() &#123;</div><div class="line">  <span class="keyword">return</span> &#123;</div><div class="line">    placeholder: <span class="string">"占位符"</span>,</div><div class="line">    title: <span class="string">"标题"</span></div><div class="line">  &#125;;</div><div class="line">&#125;,</div></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:max</span>=<span class="string">"20"</span> <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span> </span></div><div class="line"><span class="tag">    @<span class="attr">on-focus</span>=<span class="string">"onEvent('focus')"</span> @<span class="attr">on-blur</span>=<span class="string">"onEvent('blur')"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="和input一起使用"><a href="#和input一起使用" class="headerlink" title="和input一起使用"></a>和input一起使用</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"和input一起使用"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-input</span> <span class="attr">:placeholder</span>=<span class="string">"title"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-input</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:max</span>=<span class="string">"200"</span> <span class="attr">name</span>=<span class="string">"description"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="不显示计数器"><a href="#不显示计数器" class="headerlink" title="不显示计数器"></a>不显示计数器</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"不显示计数器"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:max</span>=<span class="string">"200"</span> <span class="attr">name</span>=<span class="string">"detail"</span> <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:show-counter</span>=<span class="string">"false"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="自动高度"><a href="#自动高度" class="headerlink" title="自动高度"></a>自动高度</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"自动高度"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span> <span class="attr">:show-counter</span>=<span class="string">"false"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:rows</span>=<span class="string">"1"</span> <span class="attr">autosize</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:title</span>=<span class="string">"title"</span> <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:show-counter</span>=<span class="string">"false"</span> <span class="attr">:rows</span>=<span class="string">"1"</span> <span class="attr">autosize</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="设定固定高度"><a href="#设定固定高度" class="headerlink" title="设定固定高度"></a>设定固定高度</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"设置高度为200像素"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-textarea</span> <span class="attr">:title</span>=<span class="string">"title"</span> <span class="attr">:max</span>=<span class="string">"200"</span> <span class="attr">:placeholder</span>=<span class="string">"placeholder"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:show-counter</span>=<span class="string">"false"</span> <span class="attr">:height</span>=<span class="string">"200"</span> <span class="attr">:rows</span>=<span class="string">"8"</span> <span class="attr">:cols</span>=<span class="string">"30"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-textarea</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+      <p><a href="https://feui.gitee.io/#/uploader">Live Demo&gt;&gt;</a></p>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Uploader &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Uploader.name]: Uploader</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></div></pre></td></tr></table></figure>
+<h3 id="设置input属性"><a href="#设置input属性" class="headerlink" title="设置input属性"></a>设置<code>input</code>属性</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span> </span></div><div class="line"><span class="tag">  <span class="attr">accept</span>=<span class="string">"image/gif ,image/png, image/jpeg"</span> <span class="attr">multiple</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></div></pre></td></tr></table></figure>
+<p>#Uploader</p>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
@@ -760,92 +755,49 @@
 </thead>
 <tbody>
 <tr>
-<td>value</td>
-<td>表单值, 使用v-model绑定</td>
+<td>result-type</td>
+<td>文件读取结果类型</td>
 <td><code>String</code></td>
-<td>-</td>
-<td>-</td>
+<td><code>dataUrl</code></td>
+<td><code>dataUrl</code>,<code>text</code></td>
 </tr>
 <tr>
-<td>title</td>
-<td>label文字</td>
-<td><code>String</code></td>
-<td>-</td>
-<td>-</td>
-</tr>
-<tr>
-<td>inline-desc</td>
-<td>位于标题下的描述文字</td>
-<td><code>String</code></td>
-<td>-</td>
-<td>-</td>
-</tr>
-<tr>
-<td>show-counter</td>
-<td>是否显示计数</td>
+<td>disable</td>
+<td>是否禁用图片上传</td>
 <td><code>Boolean</code></td>
 <td><code>false</code></td>
 <td><code>false</code>,<code>true</code></td>
 </tr>
 <tr>
-<td>max</td>
-<td>最大长度限制</td>
+<td>before-read</td>
+<td>读取前的回调函数，返回 false 可终止文件读取</td>
+<td><code>Function</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>after-read</td>
+<td>读取完成后的回调函数</td>
+<td><code>Function</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>max-size</td>
+<td>文件大小限制，单位为 byte</td>
 <td><code>Number</code></td>
-<td><code>0</code></td>
-<td>-</td>
-</tr>
-<tr>
-<td>name</td>
-<td>表单名字</td>
-<td><code>String</code></td>
 <td>-</td>
 <td>-</td>
 </tr>
 <tr>
-<td>placeholder</td>
-<td>没有值时的提示文字</td>
-<td><code>String</code></td>
 <td>-</td>
 <td>-</td>
-</tr>
-<tr>
-<td>rows</td>
-<td>textarea 标准属性<code>rows</code></td>
-<td><code>Number</code></td>
-<td><code>3</code></td>
 <td>-</td>
-</tr>
-<tr>
-<td>cols</td>
-<td>textarea 标准属性<code>cols</code></td>
-<td><code>Number</code></td>
-<td><code>30</code></td>
 <td>-</td>
-</tr>
-<tr>
-<td>height</td>
-<td>高度</td>
-<td><code>Number</code></td>
-<td><code>0</code></td>
 <td>-</td>
-</tr>
-<tr>
-<td>readonly</td>
-<td>textarea 标签属性<code>readonly</code></td>
-<td><code>Boolean</code></td>
-<td><code>false</code></td>
-<td><code>false</code>,<code>true</code></td>
-</tr>
-<tr>
-<td>autosize</td>
-<td>是否根据内容自动设置高度</td>
-<td><code>Boolean</code></td>
-<td><code>false</code></td>
-<td><code>false</code>,<code>true</code></td>
 </tr>
 </tbody>
 </table>
-<p>| - | - | - | - | - |</p>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
 <thead>
 <tr>
@@ -856,13 +808,8 @@
 </thead>
 <tbody>
 <tr>
-<td>label</td>
-<td>用于自定义label(即 title)部分内容</td>
 <td>-</td>
-</tr>
-<tr>
-<td>restricted-label</td>
-<td>用于自定义label部分，和slot=label不同的是，<br>该slot宽度受到父组件group的限制</td>
+<td>自定义<code>uploader</code>内容</td>
 <td>-</td>
 </tr>
 <tr>
@@ -883,21 +830,9 @@
 </thead>
 <tbody>
 <tr>
-<td>on-change</td>
-<td><code>value</code></td>
-<td>表单值变化时触发</td>
-<td>-</td>
-</tr>
-<tr>
-<td>on-focus</td>
-<td>-</td>
-<td><code>focus</code>事件</td>
-<td>-</td>
-</tr>
-<tr>
-<td>on-blur</td>
-<td>-</td>
-<td><code>blur</code>事件</td>
+<td>oversize</td>
+<td></td>
+<td>文件大小超过限制时触发</td>
 <td>-</td>
 </tr>
 <tr>
@@ -908,20 +843,28 @@
 </tr>
 </tbody>
 </table>
-<h3 id="Methods"><a href="#Methods" class="headerlink" title="Methods"></a>Methods</h3><table>
+<h3 id="afterRead"><a href="#afterRead" class="headerlink" title="afterRead"></a>afterRead</h3><table>
 <thead>
 <tr>
-<th>方法名</th>
-<th>参数</th>
+<th>Slot名</th>
 <th>说明</th>
-<th>备注</th>
+<th>类型</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>updateAutosize</td>
+<td>file</td>
+<td>文件解析后的<code>file</code>对象</td>
+<td><code>Object</code></td>
+</tr>
+<tr>
+<td>content</td>
+<td>文件内容</td>
+<td><code>String</code></td>
+</tr>
+<tr>
 <td>-</td>
-<td>重置 autosize 高度</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -931,14 +874,14 @@
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/component/switch.html">Switch 开关</a></span>
+          <span>← <a href="/docs/feui/guide/component/toast.html">Toast 提示</a></span>
         
         
       </div>
     
     <div class="footer">
       文档出现错误或者想参与贡献?
-      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/textarea.md" target="_blank">
+      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/uploader.md" target="_blank">
         在Github编辑此页面!
       </a>
     </div>
