--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -999,6 +999,14 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:center">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:left">-</td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
 <td style="text-align:center"><h3>表单组件</h3></td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
