--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -831,6 +831,7 @@ pre .prompt {
     top: 15px;
     right: 20px;
     display: block;
+    z-index: 9999;
   }
   .github-corner {
     display: none;
